# entrega_TAR

./: .gitignore  README.md
catkin_ws_turtlebot2/src/maze_pkg/scripts/: res_maze.py
catkin_ws_turtlebot2/src/mi_accion/action/: ejFibonacci.action
catkin_ws_turtlebot2/src/mi_accion/src/: ejercicios_fibCLient.py  ejercicios_fibServer.py
catkin_ws_turtlebot2/src/p2pkg/: CMakeLists.txt  package.xml
catkin_ws_turtlebot2/src/p2pkg/launch/: launch_ejercicio3.launch
catkin_ws_turtlebot2/src/p2pkg/src/: nodopub_ejercicio2.py  nodosub_ejercicio2.py
catkin_ws_turtlebot2/src/p3_pkg/scripts/: dibuja_mov.py
catkin_ws_turtlebot2/src/primer_paquete/: package.xml
catkin_ws_turtlebot2/src/primer_paquete/src/: nodo_envia.py
catkin_ws_turtlebot2/src/servicio_suma/src/: add_two_ints_server.py
catkin_ws_turtlebot3/: frames.gv  setup.sh
catkin_ws_turtlebot3/devel/include/kobuki_msgs/: AutoDockingActionFeedback.h  ScanAngle.h  SensorState.h
catkin_ws_turtlebot3/devel/include/turtlebot3_example/: Turtlebot3ActionFeedback.h
catkin_ws_turtlebot3/devel/include/turtlebot_actions/: FindFiducialAction.h  FindFiducialActionFeedback.h  FindFiducialResult.h  TurtlebotMoveAction.h  TurtlebotMoveActionFeedback.h  TurtlebotMoveActionGoal.h
catkin_ws_turtlebot3/devel/include/turtlebot_calibration/: ScanAngle.h
catkin_ws_turtlebot3/devel/include/turtlebot_msgs/: PanoramaImg.h
catkin_ws_turtlebot3/devel/include/yocs_msgs/: ColumnList.h  DockingInteractorAction.h  DockingInteractorActionFeedback.h  DockingInteractorActionResult.h  LocalizeAction.h  LocalizeActionResult.h  MagicButton.h  TrajectoryList.h  WaypointList.h  WaypointListServiceResponse.h
catkin_ws_turtlebot3/devel/lib/ecl_core_apps/: bench_containers  bench_eigen3_inverse  bench_eigen3_transforms  bench_files  bench_flops  bench_snooze  bench_string_conversions  ecl_process_statistics  ecl_serial  ecl_socket_client
catkin_ws_turtlebot3/devel/lib/ecl_devices/: demo_serial_timeouts
catkin_ws_turtlebot3/devel/lib/ecl_errors/: ecl_demo_errors
catkin_ws_turtlebot3/devel/lib/ecl_exceptions/: demo_exceptions
catkin_ws_turtlebot3/devel/lib/ecl_formatters/: demo_formatters
catkin_ws_turtlebot3/devel/lib/ecl_io/: ecl_demo_sockets
catkin_ws_turtlebot3/devel/lib/ecl_sigslots/: demo_sigslots  demo_sigslots_manager
catkin_ws_turtlebot3/devel/lib/ecl_streams/: demo_console_streams  demo_log_streams
catkin_ws_turtlebot3/devel/lib/ecl_threads/: demo_thread
catkin_ws_turtlebot3/devel/lib/ecl_time_lite/: demo_time_functions
catkin_ws_turtlebot3/devel/lib/kobuki_driver/: demo_kobuki_sigslots  demo_kobuki_simple_loop
catkin_ws_turtlebot3/devel/lib/kobuki_keyop/: keyop
catkin_ws_turtlebot3/devel/lib/pkgconfig/: depthimage_to_laserscan.pc  ecl_build.pc  ecl_concepts.pc  ecl_console.pc  ecl_containers.pc  ecl_converters.pc  ecl_converters_lite.pc  ecl_devices.pc  ecl_errors.pc  ecl_exceptions.pc  ecl_geometry.pc  ecl_ipc.pc  ecl_mpl.pc  (+21 more)
catkin_ws_turtlebot3/src/maze_pkg/: CMakeLists.txt
practica_3/parte_1/: terminal1.sh  terminal2.sh
practica_3/parte_2/catkin_ws/src/battery_act/: package.xml
practica_3/parte_2/catkin_ws/src/battery_act/action/: Battery.action
practica_3/parte_2/catkin_ws/src/battery_act/battery_act/: battery_charger.py  battery_client.py
practica_3/parte_2/catkin_ws/src/service_temp/: CMakeLists.txt
practica_3/parte_2/catkin_ws/src/service_temp/src/: temperature_client.cpp
practica_3/ros2_ws/src/battery_act/: CMakeLists.txt
practica_3/ros2_ws/src/battery_act/battery_act/: __init__.py
practica_3/ros2_ws/src/service_temp/: package.xml
practica_3/ros2_ws/src/service_temp/src/: temperature_server.cpp
practica_3/ros2_ws/src/service_temp/srv/: ConvertTemp.srv
(+474 files in other folders)
