<?xml version="1.0"?>
<package format="3">
  <name>battery_act</name>
  <version>0.0.0</version>
  <description>Simulación de batería con ROS 2 Actions</description>
  <maintainer email="jairo-docker@todo.todo">jairo-docker</maintainer>
  <license>Apache-2.0</license>

  <!-- Python dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Action interface dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
